Fixed documentation and added all portfolio methods + new methods
